--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -16,6 +16,7 @@ gem "minima", "~> 2.5"
 # If you have any plugins, put them here!
 group :jekyll_plugins do
   gem "jekyll-feed", "~> 0.12"
+  gem "jekyll-drawio", "~> 0.0.6", path: "/home/rb/source/jekyll-drawio"
 end
 
 # Windows and JRuby does not include zoneinfo files, so bundle the tzinfo-data gem
