--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: NHS Citizen Experience.
+title: NHS Citizen Experience
 email: 
 description: >- # this means to ignore newlines until "baseurl:"
   NHS Transformation Directorate, NHS England and Improvement. Giving patients, service users and carers the tools to access information and services directly.
