Changed to rocket plugin for mermaid and maths.
Signed-off-by: Ross Buggins <78215796+RossBugginsNHS@users.noreply.github.com>

--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -17,6 +17,7 @@ gem "just-the-docs"
 # If you have any plugins, put them here!
 group :jekyll_plugins do
   gem "jekyll-feed", "~> 0.12"
+  gem 'jekyll-spaceship'
   #gem "jekyll-drawio", "~> 0.0.6", path: "/home/rb/source/jekyll-drawio"
 end
 
