--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -31,7 +31,29 @@ github_username:  nhsexperience
 theme: just-the-docs
 plugins:
   - jekyll-feed
+  - jekyll-spaceship
 
+aux_links:
+  "NHS Experience  on GitHub":
+    - "//github.com/nhsexperience/nhs-experience"
+    
+footer_content: "Distributed by an <a href=\"https://github.com/nhsexperience/nhs-experience/blob/main/LICENSE.md\">Open Government Licence v3.0</a>"
+
+back_to_top: true
+back_to_top_text: "Back to top"
+
+# Footer last edited timestamp
+last_edit_timestamp: true # show or hide edit time - page must have `last_modified_date` defined in the frontmatter
+last_edit_time_format: "%b %e %Y at %I:%M %p" # uses ruby's time format: https://ruby-doc.org/stdlib-2.7.0/libdoc/time/rdoc/Time.html
+
+
+
+gh_edit_link: true # show or hide edit this page link
+gh_edit_link_text: "Edit this page on GitHub"
+gh_edit_repository: "https://github.com/RossBugginsNHS/nhs-experience" # the github URL for your repo
+gh_edit_branch: "v0.1.2-alpha" # the branch that your docs is served from
+gh_edit_source: docs # the source that your files originate from
+gh_edit_view_mode: "tree" # "tree" or "edit" if you want the user to jump into the editor immediately
 
 
 # Exclude from processing.
