Updated licence and added to gp research.
Signed-off-by: Ross Buggins <78215796+RossBugginsNHS@users.noreply.github.com>

--- a/samples/cis2-login-client/appsettings.Example.json
+++ b/samples/cis2-login-client/appsettings.Example.json
@@ -1,23 +1,21 @@
 {
-  "Cis2":
-{
-  "ClientId": "{CLIENTIDHERE}",
-  "Authority":"https://am.nhsdev.auth-ptl.cis2.spineservices.nhs.uk/openam/oauth2/realms/root/realms/oidc/",
-
-  "Secret":  "{CLIENTSECRETHERE}",
-  "Subject": "{CLIENTIDHERE}",
-  "Issuer": "{CLIENTIDHERE}",
-  "Audience": "https://am.nhsdev.auth-ptl.cis2.spineservices.nhs.uk:443/openam/oauth2/realms/root/realms/oidc/access_token",
-
-  "Scopes" : ["openid", "profile"]
-
-},
-"Logging": {
-  "LogLevel": {
-    "Default": "Debug",
-    "System": "Debug",
-    "Microsoft": "Debug"
+  "Cis2": {
+    "ClientId": "{CLIENTIDHERE}",
+    "Authority": "https://am.nhsdev.auth-ptl.cis2.spineservices.nhs.uk/openam/oauth2/realms/root/realms/oidc/",
+    "Secret": "{CLIENTSECRETHERE}",
+    "Subject": "{CLIENTIDHERE}",
+    "Issuer": "{CLIENTIDHERE}",
+    "Audience": "https://am.nhsdev.auth-ptl.cis2.spineservices.nhs.uk:443/openam/oauth2/realms/root/realms/oidc/access_token",
+    "Scopes": [
+      "openid",
+      "profile"
+    ]
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Debug",
+      "System": "Debug",
+      "Microsoft": "Debug"
+    }
   }
 }
-}
-
