--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -46,6 +46,7 @@ back_to_top_text: "Back to top"
 last_edit_timestamp: true # show or hide edit time - page must have `last_modified_date` defined in the frontmatter
 last_edit_time_format: "%b %e %Y at %I:%M %p" # uses ruby's time format: https://ruby-doc.org/stdlib-2.7.0/libdoc/time/rdoc/Time.html
 
+# Change the below based on the forked repo's details
 published_url: "https://blue-beach-03e72e403.1.azurestaticapps.net"
 gh_action_build_file_name: "azure-static-web-apps-blue-beach-03e72e403.yml"
 gh_edit_link: true # show or hide edit this page link
@@ -54,8 +55,19 @@ gh_edit_repository: "https://github.com/RossBugginsNHS/nhs-experience" # the git
 gh_edit_branch: "latest" # the branch that your docs is served from
 gh_edit_source: docs # the source that your files originate from
 gh_edit_view_mode: "tree" # "tree" or "edit" if you want the user to jump into the editor immediately
+gh_repo_owner: "Ross Buggins"
 
 
+# Do not change the below
+source_published_url: "https://zealous-beach-05e189903.1.azurestaticapps.net/"
+source_gh_action_build_file_name: "azure-static-web-apps-zealous-beach-05e189903.yml"
+source_gh_edit_link: true # show or hide edit this page link
+source_gh_edit_link_text: "Edit this page on GitHub"
+source_gh_edit_repository: "https://github.com/nhsexperience/nhs-experience" # the github URL for your repo
+source_gh_edit_branch: "main" # the branch that your docs is served from
+source_gh_edit_source: docs # the source that your files originate from
+source_gh_edit_view_mode: "tree" # "tree" or "edit" if you want the user to jump into the editor immediately
+source_gh_repo_owner: "NHS Experience"
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
