--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -18,8 +18,8 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: FORK. NHS Citizen Experience
-email: 
+title: NHS Citizen Experience Architecture
+email: ross.buggins@nhs.net
 description: >- # this means to ignore newlines until "baseurl:"
   NHS Transformation Directorate, NHS England and Improvement. Giving patients, service users and carers the tools to access information and services directly.
 baseurl: "" # the subpath of your site, e.g. /blog
