--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -42,6 +42,8 @@ footer_content: "Distributed by an <a href=\"https://github.com/nhsexperience/nh
 back_to_top: true
 back_to_top_text: "Back to top"
 
+color_scheme: ce
+
 # Footer last edited timestamp
 last_edit_timestamp: true # show or hide edit time - page must have `last_modified_date` defined in the frontmatter
 last_edit_time_format: "%b %e %Y at %I:%M %p" # uses ruby's time format: https://ruby-doc.org/stdlib-2.7.0/libdoc/time/rdoc/Time.html
