Added collection for projects.
Signed-off-by: Ross Buggins <78215796+RossBugginsNHS@users.noreply.github.com>

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -27,6 +27,12 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: 
 github_username:  nhsexperience
 
+
+collections:
+  projects: 
+    output: false
+
+
 # Build settings
 theme: just-the-docs
 plugins:
