include data always.
Signed-off-by: Ross Buggins <78215796+RossBugginsNHS@users.noreply.github.com>

--- a/src/projects/digital-health-check/discovery/dhc/src/dhcapi/dhcapi.csproj
+++ b/src/projects/digital-health-check/discovery/dhc/src/dhcapi/dhcapi.csproj
@@ -27,4 +27,8 @@
     <ProjectReference Include="..\bmiclient\bmiclient.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="data.tsv" CopyToOutputDirectory="Always" />
+  </ItemGroup>
+
 </Project>
