Added postcode cache.
Signed-off-by: Ross Buggins <78215796+RossBugginsNHS@users.noreply.github.com>

--- a/src/projects/digital-health-check/discovery/dhc/src/dhcapi/appsettings.example.json
+++ b/src/projects/digital-health-check/discovery/dhc/src/dhcapi/appsettings.example.json
@@ -1,4 +1,7 @@
 {
+  "PostCodeApi": {
+    "BaseUrl": "https://api.postcodes.io/postcodes/"
+  },
   "BpWebApiSettings":
   {
     "BaseUrl":"http://localhost:5050/"
