--- a/src/projects/digital-health-check/discovery/dhc/src/dhcapi/appsettings.json
+++ b/src/projects/digital-health-check/discovery/dhc/src/dhcapi/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "PostCodeApi": {
+    "BaseUrl": "https://api.postcodes.io/postcodes/",
+    "SlidingCacheLength": "00:10:00",
+    "AbsoluteCacheLength": "01:00:00"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
