Added webpack npm and svg to png.
Signed-off-by: Ross Buggins <78215796+RossBugginsNHS@users.noreply.github.com>

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -43,6 +43,13 @@ plugins:
   - jekyll-feed
   - jekyll-spaceship
 
+
+webpack:
+  debounce:
+    run_once: true
+  cleanup_files:
+    - node_modules
+
 aux_links:
   "Citizen Experience on GitHub":
     - "//github.com/nhsexperience/nhs-experience"
