--- a/docs/package.json
+++ b/docs/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "private": true,
   "scripts": {
-    "build": "webpack"
+    "build": "webpack && bundle exec jekyll build"
   },
   "keywords": [],
   "author": "",
