add bundle install
Signed-off-by: Ross Buggins <78215796+RossBugginsNHS@users.noreply.github.com>

--- a/docs/package.json
+++ b/docs/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "private": true,
   "scripts": {
-    "build": "webpack && bundle exec jekyll build"
+    "build": "webpack && bundle install && bundle exec jekyll build"
   },
   "keywords": [],
   "author": "",
