--- a/docs/_config_staging.yml
+++ b/docs/_config_staging.yml
@@ -1,4 +1,4 @@
-title: NHS Citizen Experience Architecture - Staging
+title: NHS Citizen Experience Architecture - Draft
 email: ross.buggins@nhs.net
 description: >- # this means to ignore newlines until "baseurl:"
   NHS Transformation Directorate, NHS England and Improvement. Giving patients, service users and carers the tools to access information and services directly.
