--- a/docs/package.json
+++ b/docs/package.json
@@ -6,18 +6,26 @@
   "scripts": {
     "build-production": "JEKYLL_ENV=production webpack && bundle install && bundle exec jekyll build  --config _config.yml,_config_production.yml",
     "build-staging": "JEKYLL_ENV=staging webpack && bundle install && bundle exec jekyll build --config _config.yml,_config_staging.yml",
-    "build-development": "JEKYLL_ENV=development webpack && bundle install && bundle exec jekyll build --config _config.yml,_config_development.yml",
-    "debug": "JEKYLL_ENV=development bundle exec jekyll serve --config _config.yml,_config_development.yml"
+    "build-development": "JEKYLL_ENV=development webpack --mode=development && bundle install && bundle exec jekyll build --config _config.yml,_config_development.yml",
+    "debug": "JEKYLL_ENV=development webpack && bundle exec jekyll serve --config _config.yml,_config_development.yml",
+    "debug-webpackdev": "JEKYLL_ENV=development webpack --mode=development && bundle exec jekyll serve --config _config.yml,_config_development.yml"    
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "css-loader": "^6.7.1",
+    "saas": "^1.0.0",
+    "sass": "^1.55.0",
+    "sass-loader": "^13.0.2",
+    "style-loader": "^3.3.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.2.0"
   },
   "dependencies": {
+    "@fontsource/source-sans-pro": "^4.5.11",
     "canvg": "^4.0.1",
-    "jquery": "^3.6.1"
+    "jquery": "^3.6.1",
+    "reveal.js": "^4.3.1"
   }
 }
