reveal js working, with mermaid and separate files.
Signed-off-by: Ross Buggins <78215796+RossBugginsNHS@users.noreply.github.com>

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -7,16 +7,9 @@ collections:
   projectlibs: 
     output: false    
 
+
 # Build settings
 theme: just-the-docs
-plugins:
-  - jekyll-feed
-  - jekyll-spaceship
-
-jekyll-spaceship:
-  # default enabled processors
-  processors:
-    - table-processor
 
 
 webpack:
@@ -44,6 +37,9 @@ source_gh_edit_branch: "main" # the branch that your docs is served from
 source_gh_edit_source: docs # the source that your files originate from
 source_gh_edit_view_mode: "tree" # "tree" or "edit" if you want the user to jump into the editor immediately
 source_gh_repo_owner: "NHS Experience"
+
+include:
+  - _slides/
 
 exclude:
   - .sass-cache/
