--- a/docs/_config_production.yml
+++ b/docs/_config_production.yml
@@ -22,3 +22,12 @@ aux_links:
     - "//github.com/nhsexperience/nhs-experience"
 
 footer_content: "Distributed by an <a href=\"https://github.com/nhsexperience/nhs-experience/blob/main/LICENSE.md\">Open Government Licence v3.0</a>"
+
+plugins:
+  - jekyll-feed
+  - jekyll-spaceship
+
+jekyll-spaceship:
+  # default enabled processors
+  processors:
+    - table-processor
