--- a/docs/_config_staging.yml
+++ b/docs/_config_staging.yml
@@ -17,3 +17,12 @@ gh_edit_branch: "latest" # the branch that your docs is served from
 gh_edit_source: docs # the source that your files originate from
 gh_edit_view_mode: "tree" # "tree" or "edit" if you want the user to jump into the editor immediately
 gh_repo_owner: "Ross Buggins"
+
+plugins:
+  - jekyll-feed
+  - jekyll-spaceship
+
+jekyll-spaceship:
+  # default enabled processors
+  processors:
+    - table-processor
