--- a/docs/package.json
+++ b/docs/package.json
@@ -4,11 +4,13 @@
   "description": "",
   "private": true,
   "scripts": {
-    "build-production": "JEKYLL_ENV=production webpack && bundle install && bundle exec jekyll build  --config _config.yml,_config_production.yml",
-    "build-staging": "JEKYLL_ENV=staging webpack && bundle install && bundle exec jekyll build --config _config.yml,_config_staging.yml",
-    "build-development": "JEKYLL_ENV=development webpack --mode=development && bundle install && bundle exec jekyll build --config _config.yml,_config_development.yml",
-    "debug": "JEKYLL_ENV=development webpack && bundle exec jekyll serve --config _config.yml,_config_development.yml",
-    "debug-webpackdev": "JEKYLL_ENV=development webpack --mode=development && bundle exec jekyll serve --config _config.yml,_config_development.yml"    
+    "build-production": "webpack && bundle install && JEKYLL_ENV=production bundle exec jekyll build  --config _config.yml,_config_production.yml",
+    "build-staging": "webpack && bundle install && JEKYLL_ENV=staging bundle exec jekyll build --config _config.yml,_config_staging.yml",
+    "build-development": "webpack --mode=development && bundle install && JEKYLL_ENV=development bundle exec jekyll build --config _config.yml,_config_development.yml",
+    "debug": "JEKYLL_ENV=development BUNDLE_GEMFILE=Gemfile-dev bundle exec jekyll serve -I --config _config.yml,_config_development.yml --limit_posts 1",
+    "debug-webpack": "webpack --mode=development && JEKYLL_ENV=development BUNDLE_GEMFILE=Gemfile-dev bundle exec jekyll serve --config _config.yml,_config_development.yml --limit_posts 1",
+    "webpack": "webpack --mode=development"
+
   },
   "keywords": [],
   "author": "",
