--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -19,6 +19,7 @@ gem 'jekyll-webpack'
 group :jekyll_plugins do
   gem "jekyll-feed", "~> 0.12"
   gem 'jekyll-spaceship'
+  gem "jekyll-pdf-embed"
   #gem "jekyll-drawio", "~> 0.0.6", path: "/home/rb/source/jekyll-drawio"
 end
 
