--- a/docs/_config_development.yml
+++ b/docs/_config_development.yml
@@ -10,10 +10,10 @@ github_username:  rossbugginsnhs
 published_url: "https://localhost:4000"
 gh_action_build_file_name: "azure-static-web-apps-blue-beach-03e72e403.yml"
 gh_edit_link: true # show or hide edit this page link
-gh_edit_link_text: "Edit this page locally"
-gh_edit_repository: "https://localhost:4000" # the github URL for your repo
+gh_edit_link_text: "Edit this page on GitHub"
+gh_edit_repository: "https://github.com/RossBugginsNHS/nhs-experience" # the github URL for your repo
 gh_edit_branch: "latest" # the branch that your docs is served from
-gh_edit_source: docs # the source that your files originate from
+gh_edit_source: "docs" # the source that your files originate from
 gh_edit_view_mode: "tree" # "tree" or "edit" if you want the user to jump into the editor immediately
 gh_repo_owner: "Ross Buggins"
 
