--- a/docs/_config_production.yml
+++ b/docs/_config_production.yml
@@ -27,6 +27,7 @@ plugins:
   - jekyll-feed
   - jekyll-spaceship
   - jekyll-pdf-embed
+  - jekyll-random  
 jekyll-spaceship:
   # default enabled processors
   processors:
