--- a/docs/package.json
+++ b/docs/package.json
@@ -9,6 +9,7 @@
     "build-development": "webpack --mode=development && bundle install && JEKYLL_ENV=development bundle exec jekyll build --config _config.yml,_config_development.yml",
     "debug": "JEKYLL_ENV=development BUNDLE_GEMFILE=Gemfile-dev bundle exec jekyll serve --config _config.yml,_config_development.yml --limit_posts 1",
     "debug-webpack": "webpack --mode=development && JEKYLL_ENV=development BUNDLE_GEMFILE=Gemfile-dev bundle exec jekyll serve --config _config.yml,_config_development.yml --limit_posts 1",
+    "debug-i": "JEKYLL_ENV=development BUNDLE_GEMFILE=Gemfile-dev bundle exec jekyll serve --config _config.yml,_config_development.yml --limit_posts 1 -I",
     "webpack": "webpack --mode=development"
 
   },
