--- a/docs/package.json
+++ b/docs/package.json
@@ -11,13 +11,14 @@
     "debug-webpack": "webpack --mode=development && JEKYLL_ENV=development BUNDLE_GEMFILE=Gemfile-dev bundle exec jekyll serve --config _config.yml,_config_development.yml --limit_posts 1",
     "debug-i": "JEKYLL_ENV=development BUNDLE_GEMFILE=Gemfile-dev bundle exec jekyll serve --config _config.yml,_config_development.yml --limit_posts 1 -I",
     "webpack": "webpack --mode=development"
-
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.1",
+    "mini-css-extract-plugin": "^2.6.1",
     "saas": "^1.0.0",
     "sass": "^1.55.0",
     "sass-loader": "^13.0.2",
@@ -29,6 +30,7 @@
     "@fontsource/source-sans-pro": "^4.5.11",
     "canvg": "^4.0.1",
     "jquery": "^3.6.1",
-    "reveal.js": "^4.3.1"
+    "reveal.js": "^4.3.1",
+    "reveal.js-menu": "^2.1.0"
   }
 }
