--- a/docs/package.json
+++ b/docs/package.json
@@ -30,6 +30,7 @@
     "@fontsource/source-sans-pro": "^4.5.11",
     "canvg": "^4.0.1",
     "jquery": "^3.6.1",
+    "mermaid": "^9.1.7",
     "reveal.js": "^4.3.1",
     "reveal.js-menu": "^2.1.0"
   }
