--- a/docs/package.json
+++ b/docs/package.json
@@ -33,5 +33,9 @@
     "mermaid": "^9.1.7",
     "reveal.js": "^4.3.1",
     "reveal.js-menu": "^2.1.0"
-  }
+  },
+  "engines": {
+    "npm": ">=8.19.2"
+}
+
 }
